--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,9 @@
 name: Events Demo 1
-on: ...
+on:
+  pull_request:
+    # activity type 정의
+    types:
+      - opened
 jobs:
   deploy:
     runs-on: ubuntu-latest
