--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -4,6 +4,7 @@ on:
     # activity type 정의
     types:
       - opened
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,4 +20,4 @@ jobs:
       - name: Build code
         run: npm run build
       - name: Deploy project
-        run: echo "Deploying..."
+        run: echo "Deploying...."
