--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -5,6 +5,11 @@ on:
     types:
       - opened
   workflow_dispatch:
+  push:
+    branches:
+      - main # main
+      - "dev-*" # dev-new dev-this-is-new
+      - "feat/**" # feat/new feat/new/button
 jobs:
   deploy:
     runs-on: ubuntu-latest
